main.css
/* color scheme */
body {
    background: rgb(250, 250, 250);
    --bg-color-2: rgba(0, 0, 0, 0.1);
    --active-bg-color: var(--bg-color-2);
    --text-color: rgb(50, 50, 50);
    --sub-text-color: rgb(80, 80, 80);
    --icon-color: var(--text-color);
    --link-color: rgb(3, 102, 214);
    --sub-link-color: var(--link-color);
}
@media (prefers-color-scheme: dark) {
    body {
        background: rgb(25, 30, 35);
        --bg-color-2: rgba(255, 255, 255, 0.05);
        --text-color: rgb(200, 200, 200);
        --sub-text-color: rgb(160, 160, 160);
        --icon-color: rgb(190, 190, 190);
        --link-color: rgb(65, 175, 235);
        --sub-link-color: rgb(44, 160, 216);
    }
    img {
        filter: brightness(.8) contrast(1.2);
    }
}

/* infobox */
.infobox {
    margin-bottom: 1.5em;
    max-width: 20rem;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    background-color: var(--bg-color-2);
}
.infobox a:hover {
    background-color: var(--bg-color-2);
}
.ar-1-1 {
    width: 100%;
    padding-top: 100%;
    position: relative;
}
img.fix-ar {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    text-align: center;
}
.profiles {
    display: flex;
    align-items: center;
}
.profiles a {
    display: flex;
    padding: 0.2em;
}
.infobox .emla {
    display: flex;
    align-items: center;
    justify-content: center;
}
.infobox .emla .icon {
    max-width: 2.5em;
    margin-right: 0.2em;
}
.icon {
    height: 2em;
    width: 100%;
}
.obfus {
    flex-direction: row-reverse;
}
.ask-upper {
    color: var(--icon-color);
}
.ask-container .ask-lower, .ask-container:hover .ask-upper, .ask-container:focus .ask-upper {
    display: none;
}
.ask-container .ask-upper, .ask-container:hover .ask-lower, .ask-container:focus .ask-lower {
    display: flex;
}

/* main */
body {
    color: var(--text-color);
    font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, 'Open Sans', sans-serif;
    font-size: 1.2em;
    line-height: 150%;

    margin: 0;
    padding: 0 2.5em;
}
a {
    color: var(--link-color);
}
a:not(:hover) {
    text-decoration: none;
}
h1, h2, h3, h4, h5, h6 {
    font-weight: 500;
    line-height: initial;
}

h1 {
    text-align: center;
    font-size: 3rem;
}
.subh {
    color: var(--sub-text-color);
    font-weight: 400;
    font-size: 80%;
}
li img {
    vertical-align: middle;
}
.project-list h2 {
    margin: 0;
    font-size: 1.2em;
    display: inline;
}
.project-list header {
    margin: 1em 0;
}
.hmeta {
    color: var(--sub-text-color);
    font-size: 95%;
    display: block;
}
.hmeta.date {
    display: inline;
    white-space: nowrap;
}
a.hmeta, .hmeta a {
    color: var(--sub-link-color);
}
#emla-icon, #github-icon {
    fill: var(--icon-color);
}

.paper-list > li {margin-bottom: 1em;}
.cite-title, .cite-link, .cite-authors-venue {display: block;}
.cite-title {font-size: 1.2em;}
.cite-link {font-family: monospace;}
.cite-authors-venue {color: var(--sub-text-color);}
.cite-authors-venue a {color: var(--sub-link-color);}

.linkable-list > li:target {
    background-color: var(--active-bg-color);
    box-shadow: 0px 0px 5px 10px var(--active-bg-color);
}

/* responsiveness */
@media (max-width: 820px) {
    body {
        padding: 0 1em;
    }
    ul {
        padding-left: 1em;
    }
    ol {
        padding-left: 1.2em;
    }
    .infobox {
        margin-left: auto;
        margin-right: auto;
    }
}
@media (min-width: 821px) {
    p {
        text-align: justify;
    }
    .infobox {
        float: right;
        margin-left: 2em;
    }
}

